@@ -1,7 +1,9 @@
 = 1.5.0
 
-* Add flush_all command.  Patch #13019 and bug #10503.  Submitted by Sebastian
-  Delmont and Rick Olson.
+* Add MemCache#flush_all command.  Patch #13019 and bug #10503.  Submitted by
+  Sebastian Delmont and Rick Olson.
+* Type-cast data returned by MemCache#stats.  Patch #10505 submitted by
+  Sebastian Delmont.
 
 = 1.4.0
 
